@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX gsl-shell-font.patch 643 SHA256 41fcdae34ad50d9af430314520458833943dc7e218ec707e14f115b190208321 SHA512 feeb151ff96c02b523f284acbaf214480b92cac42af497f6210726ff2a3b837c6792733ad5c2ac4be58fea68c18c5d10bf7db711336e32c9998c1456bfa3cbff WHIRLPOOL e7816c93202c0c60a18598630174c4af7200a64cfc4ec9944b3ea8c3a3a5452faf00431b2e20f83e840c063f82c1a0ee65a7de554fafa9a21446a4c5da651ae2
 AUX gsl-shell-nogui.patch 809 SHA256 6243647228918d4cdde4e1360ca0b7a7b4577b35044043db5d48a84333aea15d SHA512 b43d8009fef20ef847e098d4279b415ab26643970157b4fd49be1e255e1e8f59862159c2cb6054726d988c2d8b3bd6935673a509c803f486388a333040cde409 WHIRLPOOL ca0c1822b51fc7d0c78c6249790af8ae0018618055fa4ef1e8e775d3dd685aa26258c0120a79903dd40ef721a35f60b09beefe0ef31c626aa9738e376214ef21
 AUX gsl-shell-strip.patch 361 SHA256 b055fda96fa65658ff73143c5ab2242fabf2ff90e9a01da57758cf073f48de86 SHA512 ecb78c52f34d678ecec5ca5f6ee9c85cf954866347501aaf2fd31133357d8085bbbaf3d6118ae2cd20e8375927ae9c1958732bfab09bf308bde7fc3255fa35bf WHIRLPOOL 56ceab90c029426a1697a77c37049b275996d8ebbbf13d5f7e5a20d2dd8c5167ba3a034ff6071b3dab741ef1286d1692b84e3e99b5cd223af98fd74712f08f0d
 AUX gsl-shell-usr.patch 250 SHA256 e0199baa0018dc68f1eef3d51d6fcd8f501725ee9f368446a1312608e6dbed28 SHA512 e10df17a16969ad700e7f16c8fcf694e9c5f2d346e6db7ad5d616122c5160d9ea3d894354aef4214e48233a17e101b20b51c939fdbcb29b25169a4c6c07bc0c3 WHIRLPOOL f586cb39b7e585a0949a61dffe36274285f64f22d428439c1c281e942d9a8cd3dee660a79891d4615402a90e7ddc7b113a36ded05f917ca8cf1e634f42f7b1ae
 DIST gsl-shell-2.2.0.tar.gz 3138063 SHA256 e05bcc78ea3c70d209b12a3db5c86b5ed23e50617d68cb0081046382973b2d33 SHA512 1394cbafecd55ddf5c8c992273f1fa400825b21202cd53ac548a99e34a9183ba4a5dcb2ef10ef9a7930f78ed4e6343b8d2a5d34c38a8e7766300b5bf73596d89 WHIRLPOOL 9bbfa55c988611fa0c771fc6c49473e139eff936f4f22b4b419c409e8450c733a57f2d9bbbc799f754654ff5cf5b303ab263bb502ef712ad439564c6e3b28fef
-EBUILD gsl-shell-2.2.0.ebuild 1485 SHA256 2d84f0d087c847a09b71f5e2e91545217d30ac2c6e6f410efe6f47288f5f30d0 SHA512 6115eeff7fad2477ed3421ddab2538db66cded8b7f8742b0d2243a2f26e8bf55c86b0e41fc888153d50ad023eba3bf6cbce7a76db8ac38bd1302f9dfabb6ac9c WHIRLPOOL 610a38969b941e8ca73ba4149f3120e9230a0ba4ca0219377ee53b77f9bf815ca4266b889795afe0ec8ace034135d9afccf78ccaeba963cd5a0e0106ec65d854
-MISC ChangeLog 1328 SHA256 3690a13441b38801efcfc5fa25e1f2c22ded3ba527b77c246521919531c51baf SHA512 49846dec1872f3e4c5b4e01b65ebc25ff028452fd7972f57a1d18ff787d0710d6d20fe76b95ea3de13a1a28862ce792e2c674ee87b973113f4fc429c77340455 WHIRLPOOL aa66258c82017aaa1dacbe5b9a7984021adffc5d9a3f380a4216164302c9db3ea98cedfd7f99f1078ae545249a8b4799f692c4fe87336efc27d999b02141240d
-MISC metadata.xml 827 SHA256 d2543b251374761d9c167a544656ad1164bf09e67c0774686c4ce47834739441 SHA512 0bb6d572f8def7438bacc3f883dac17b24382c7a3e10ca2a4843bd03db600399f40090cb1f6631d4759a6cc7d2709029d581bcc29f8373e713e95b86c3ff6e75 WHIRLPOOL cbc5d970895409148686055e3ee5b4ee879c0ad7e33ce166d375c76a6546dd23f9515144421398e4e88f99714190e30a2327286c79158a1d7831576bb864095c
+EBUILD gsl-shell-2.2.0.ebuild 1516 SHA256 1302dccca1ce9244fce374d3b159ee8c078cffab7e66d25b4ab42bc53e64ac0b SHA512 c210b1d40e65fedde0b198f1ee1644706b3617d679fdb803fe0d471a4beb3904c5b34ad3b5e12cf7ae470a99839705486feb411251dcf522baf74a996273964b WHIRLPOOL 2e49ffcd4028b542fc1d103ea21c278a14a0650580771299cb4e5f6ce95281e97269dd23f1fd468cc7995f31a0a7c442540322b6a0dc7be67be8aa722a5d8269
+MISC ChangeLog 1496 SHA256 3590b83e0fec114d506f55952df575c055eb7b597c485b4d988c04b9e3ffc6f7 SHA512 4fbb1a9623230688e205039b6aa53686d703d5c8d0c11dd5e1f45d8b92a92ccb80887d23cf12626f10f2d8a8c53cb9f60916d46962904200239d7f95f61dc67a WHIRLPOOL 1f4b0f3d43e6c9f3b90bfdfcff76bc1456b02d6d390ceb40fff89fd29d3bbf62e129fd43167afad7ebdc34bba939313a820c9f170fa080129a1484933a5ab3db
+MISC metadata.xml 843 SHA256 8da5a873eb45a57fcb31ba1a0717a44627434c2a11af7a41eab44b548bc16c2a SHA512 9df6ac40ed3acf090e28c559420c5e85164efe85cc6ca7ec97cd6f7ef736583e48a2fa3fbe41ab4f1f740fdd125ffab3c10c148e796a8d51a51757d4c45c1608 WHIRLPOOL 84c5127f25f5b27afb1c6c3891a54b41b68b2df8ff6639741d7ccf8460372445065152700a3570331d078250504ec5a759332e0abb03c7c9d020deb5e3d28c51
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlEmK2gACgkQgAnW8HDreRbbLACdED66aNwEH9YMOWkhwLWLRfcZ
+SfcAn32VSmBbahC4MCEOnvR3lWCQnCrw
+=j4tC
+-----END PGP SIGNATURE-----
