@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<maintainer>
-  <email>grozin@gentoo.org</email>
-  <name>Andrey Grozin</name>
+  <maintainer>
+    <email>grozin@gentoo.org</email>
+    <name>Andrey Grozin</name>
   </maintainer>
-<herd>sci-mathematics</herd>
-<longdescription lang="en">
+  <herd>sci-mathematics</herd>
+  <longdescription lang="en">
 GSL shell offers an interactive command-line interface
 that gives access to GSL collection of mathematical functions.
 GSL shell is based on the powerful and elegant scripting language Lua.
@@ -15,7 +15,7 @@ but does offer much more simple and expressive way to use GSL.
 The objective of GSL shell is to give the user the power
 of easily access GSL functions without having to write a complete C application.
 </longdescription>
-<use>
-  <flag name='fox'>Build a <pkg>x11-libs/fox</pkg> GUI</flag>
-</use>
+  <use>
+    <flag name="fox">Build a <pkg>x11-libs/fox</pkg> GUI</flag>
+  </use>
 </pkgmetadata>
